--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ flask==3.1.1
 flask-cors==6.0.1
 beautifulsoup4==4.13.3
 sqlalchemy==2.0.42
+requests==2.32.3
+python-dotenv==1.1.1
+psycopg2-binary==2.9.10
